--- a/europ.Rmd
+++ b/europ.Rmd
@@ -12,6 +12,8 @@ source("data-bzh-tools-master/main.R")
 library(tidyverse)
 download.file("https://data.rennesmetropole.fr/explore/dataset/resultats_e19/download/?format=csv&timezone=Europe/Berlin&use_labels_for_header=true", "europ.csv")
 df <- read_csv2("europ.csv")
+df %>% select(contains("24"), NUMERO_CANTON, NIVEAU_DETAIL) -> cat
+
 names(df)
 table(df$NIVEAU_DETAIL)
 vi <- filter(df, NIVEAU_DETAIL == "vi")
@@ -78,88 +80,51 @@ full %>%
 ```
 
 
-### Participation par Circonscription
+### Par Circonscription
 
 ```{r}
-filter(df, NIVEAU_DETAIL == "bu") %>%
-  group_by(NUMERO_CANTON) %>%
-  summarise(
-    NB_INSCRITS = sum(NB_INSCRITS), 
-    NB_EMARGEMENTS = sum(NB_EMARGEMENTS),
-    NB_BULLETINS = sum(NB_BULLETINS),
-    NB_NULS = sum(NB_NULS),
-    NB_EXPRIMES = sum(NB_EXPRIMES),
-    NB_BLANC = sum(NB_BLANC)
-    ) %>%
-  knitr::kable() %>%
-  clipr::write_clip()
+ci <- df %>% filter(NIVEAU_DETAIL == "ci")
+knitr::kable(
+  ci %>% select(
+    NOM_CIRCONSCRIPTION,
+    NB_INSCRITS, NB_EMARGEMENTS, NB_BULLETINS,
+    NB_NULS, NB_EXPRIMES, NB_BLANC, POURCENTAGE_PARTICIPATION
+    )
+) %>% clipr::write_clip()
 ```
 
-### Participation par Circonscription
-
-```{r}
-filter(df, NIVEAU_DETAIL == "bu") %>%
-  group_by(NOM_CIRCONSCRIPTION) %>%
-  summarise(
-    NB_INSCRITS = sum(NB_INSCRITS), 
-    NB_EMARGEMENTS = sum(NB_EMARGEMENTS),
-    NB_BULLETINS = sum(NB_BULLETINS),
-    NB_NULS = sum(NB_NULS),
-    NB_EXPRIMES = sum(NB_EXPRIMES),
-    NB_BLANC = sum(NB_BLANC)
-    ) %>%
-  knitr::kable()%>%
-  clipr::write_clip()
-```
-
-### Résultats par Circonscription
-
-Combien de bureaux de vote par circonscription ? 
-
-```{r}
-df <- filter(df, NIVEAU_DETAIL == "bu")
-count(df, NUMERO_CIRCONSCRIPTION, NOM_CIRCONSCRIPTION) %>%
-  knitr::kable() %>%
-  clipr::write_clip()
-```
-
-Nombre d'émargement par circonscription
-
-```{r}
-df %>% 
-  group_by(NOM_CIRCONSCRIPTION) %>%
-  summarise(
-    NB_EMARGEMENTS = sum(NB_EMARGEMENTS)
-  )
-```
 
 
 
 #### 1ère circonscription
 
 ```{r}
-vi <- filter(df, NUMERO_CIRCONSCRIPTION == 1)
+rm(full)
+vi <- filter(ci, NUMERO_CIRCONSCRIPTION == 1)
 
 cand <- vi %>% 
   select(contains("CANDIDAT_")) %>%
-  gather("code", "name") %>%
-  distinct()
+  gather("code", "name")
+
+pour <- vi %>% 
+  select(matches("POURCENTAGE_[0-9]{1,2}")) %>%
+  gather("code_pour", "pourcentage") 
 
 nbvoix <- vi %>% 
   select(matches("NB_VOIX_[0-9]{1,2}")) %>%
-  gather("code_nb", "nb_voix")  %>%
-  group_by(code_nb) %>%
-  summarize(
-    nb_voix = sum(nb_voix)
-  )
+  gather("code_nb", "nb_voix") 
 
-full <- cbind(cand, nbvoix) 
+full <- cbind(cand, pour) %>% cbind(nbvoix)
+full %>% 
+  arrange(desc(nb_voix)) %>% 
+  select(name, pourcentage, nb_voix) %>%
+  knitr::kable() %>% clipr::write_clip()
 {ggplot(full, aes(reorder(name, nb_voix), nb_voix)) + 
   geom_col(fill = databzh$colour2) + 
   coord_flip() + 
   labs(x = "Candidats", 
        y = "", 
-       title = "Résultats des élections Européennes 2019 à Rennes - Tour 1\n1ère circonscription", 
+       title = "Résultats des élections Européennes 2019 à Rennes - Tour 1\n1éré circonscription", 
        subtitle = "https://data.rennesmetropole.fr/",
        caption = "http://data-bzh.fr") +
   databzhTheme()} %>%
@@ -171,22 +136,27 @@ full <- cbind(cand, nbvoix)
 #### 2ème circonscription
 
 ```{r}
-vi <- filter(df, NUMERO_CIRCONSCRIPTION == 2) 
+rm(full)
+vi <- filter(ci, NUMERO_CIRCONSCRIPTION == 2)
 
 cand <- vi %>% 
   select(contains("CANDIDAT_")) %>%
-  gather("code", "name") %>%
-  distinct()
+  gather("code", "name")
+
+pour <- vi %>% 
+  select(matches("POURCENTAGE_[0-9]{1,2}")) %>%
+  gather("code_pour", "pourcentage") 
 
 nbvoix <- vi %>% 
   select(matches("NB_VOIX_[0-9]{1,2}")) %>%
-  gather("code_nb", "nb_voix")  %>%
-  group_by(code_nb) %>%
-  summarize(
-    nb_voix = sum(nb_voix)
-  )
+  gather("code_nb", "nb_voix") 
 
-full <- cbind(cand, nbvoix) 
+full <- cbind(cand, pour) %>% cbind(nbvoix)
+full %>% 
+  arrange(desc(nb_voix)) %>% 
+  select(name, pourcentage, nb_voix) %>%
+  knitr::kable() %>% 
+  clipr::write_clip()
 {ggplot(full, aes(reorder(name, nb_voix), nb_voix)) + 
   geom_col(fill = databzh$colour3) + 
   coord_flip() + 
@@ -204,22 +174,27 @@ full <- cbind(cand, nbvoix)
 #### 3ème circonscription
 
 ```{r}
-vi <- filter(df,NUMERO_CIRCONSCRIPTION == 3) 
+rm(full)
+vi <- filter(ci, NUMERO_CIRCONSCRIPTION == 3)
 
 cand <- vi %>% 
   select(contains("CANDIDAT_")) %>%
-  gather("code", "name") %>%
-  distinct()
+  gather("code", "name")
+
+pour <- vi %>% 
+  select(matches("POURCENTAGE_[0-9]{1,2}")) %>%
+  gather("code_pour", "pourcentage") 
 
 nbvoix <- vi %>% 
   select(matches("NB_VOIX_[0-9]{1,2}")) %>%
-  gather("code_nb", "nb_voix")  %>%
-  group_by(code_nb) %>%
-  summarize(
-    nb_voix = sum(nb_voix)
-  )
+  gather("code_nb", "nb_voix") 
 
-full <- cbind(cand, nbvoix) 
+full <- cbind(cand, pour) %>% cbind(nbvoix)
+full %>% 
+  arrange(desc(nb_voix)) %>% 
+  select(name, pourcentage, nb_voix) %>%
+  knitr::kable() %>% 
+  clipr::write_clip()
 {ggplot(full, aes(reorder(name, nb_voix), nb_voix)) + 
   geom_col(fill = databzh$colour4) + 
   coord_flip() + 
@@ -237,22 +212,27 @@ full <- cbind(cand, nbvoix)
 #### 1ère circonscription
 
 ```{r}
-vi <- filter(df, NUMERO_CIRCONSCRIPTION == 8) 
+rm(full)
+vi <- filter(ci, NUMERO_CIRCONSCRIPTION == 8)
 
 cand <- vi %>% 
   select(contains("CANDIDAT_")) %>%
-  gather("code", "name") %>%
-  distinct()
+  gather("code", "name")
+
+pour <- vi %>% 
+  select(matches("POURCENTAGE_[0-9]{1,2}")) %>%
+  gather("code_pour", "pourcentage") 
 
 nbvoix <- vi %>% 
   select(matches("NB_VOIX_[0-9]{1,2}")) %>%
-  gather("code_nb", "nb_voix")  %>%
-  group_by(code_nb) %>%
-  summarize(
-    nb_voix = sum(nb_voix)
-  )
+  gather("code_nb", "nb_voix") 
 
-full <- cbind(cand, nbvoix) 
+full <- cbind(cand, pour) %>% cbind(nbvoix)
+full %>% 
+  arrange(desc(nb_voix)) %>% 
+  select(name, pourcentage, nb_voix) %>%
+  knitr::kable() %>% 
+  clipr::write_clip()
 {ggplot(full, aes(reorder(name, nb_voix), nb_voix)) + 
   geom_col(fill = databzh$colour5) +
   coord_flip() + 
